--- a/error-002.html
+++ b/error-002.html
@@ -14,11 +14,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>Site Incompativel</title>
     <!-- CSS files -->
-    <link href="./dist/css/tabler.min.css" rel="stylesheet"/>
-    <link href="./dist/css/tabler-flags.min.css" rel="stylesheet"/>
-    <link href="./dist/css/tabler-payments.min.css" rel="stylesheet"/>
-    <link href="./dist/css/tabler-vendors.min.css" rel="stylesheet"/>
-    <link href="./dist/css/demo.min.css" rel="stylesheet"/>
+    <link href="./dist/Css/tabler.min.css" rel="stylesheet"/>
+    <link href="./dist/Css/tabler-flags.min.css" rel="stylesheet"/>
+    <link href="./dist/Css/tabler-payments.min.css" rel="stylesheet"/>
+    <link href="./dist/Css/tabler-vendors.min.css" rel="stylesheet"/>
+    <link href="./dist/Css/demo.min.css" rel="stylesheet"/>
   </head>
   <body  class=" border-top-wide border-primary d-flex flex-column">
     <div class="page page-center">
