--- a/RecuperarSenha.html
+++ b/RecuperarSenha.html
@@ -98,6 +98,9 @@
           </a>
         </div>
       </div>
+      <span id="Layout" style="display: none;">ddd</span>
+      <span id="New_User_BTN" style="display: none;">ddd</span>
+      <span id="Interface" style="display: none;">ddd</span>
 
     </div>
     
@@ -318,8 +321,7 @@ setTimeout(function(){ x.className = x.className.replace("show", ""); }, 3000);
 
  
   check = 'false'
-  document.getElementById('visible_on').style = "opacity: 0;"
-  document.getElementById('visible_off').style = "opacity: 1;"
+ 
 
 
   
