--- a/Inicio.html
+++ b/Inicio.html
@@ -588,10 +588,12 @@
                       </span>
                   Pagamentos
                   </a>
-                  <a href="#" class="btn btn-primary d-sm-none btn-icon" data-bs-toggle="modal" data-bs-target="#modal-report" aria-label="Create new report" style="background: rgba(0, 110, 255, 0.212);">
+                  <a href="Solitar_Historico.html" class="btn btn-primary d-sm-none btn-icon" data-bs-toggle="modal" data-bs-target="#modal-report" aria-label="Create new report" style="background: rgba(0, 110, 255, 0.212);">
                     <!-- Download SVG icon from http://tabler-icons.io/i/plus -->
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><line x1="12" y1="5" x2="12" y2="19" /><line x1="5" y1="12" x2="19" y2="12" /></svg>
-                  </a>
+					 <span class="icon material-symbols-sharp notranslate" translate="no" style="font-size: 20px;">
+                      monetization_on
+                      </span>
+                   
                 </div>
               </div>
             </div>
@@ -610,8 +612,8 @@
                     </div>
                   </div>
                   <div class="card-body">
-                    <h3 class="card-title">Não Fique Triste</h3>
-                    <p class="text-muted">Mesmo Esses Numeros Estando Tão Baixo Eles Irão Aumentar Com o Tempo!, Este E Uma Simulação De Um Banco Real, Então Aproveite Seu Novo Banco Virtual Gratuito (Até Porque Numca Foi Pago).</p>
+                    <h3 class="card-title">Lembrando Essa E Uma Versão Temporaria</h3>
+                    <p class="text-muted">Caso Ache Feio Algumas Coisas(Todas), Saiba Que essa E Uma Versão Temporaria, E Tem Bugs.</p>
                   </div>
                 </div>
               </div>
@@ -2657,7 +2659,7 @@ localStorage.setItem('Likes_On', 'On')
  </script>
  <style>
   body {
-    zoom: 0.85 /* Coloca o zoom em 200% */
+    zoom: 1.9 /* Coloca o zoom em 200% */
 }
  </style>
 
