--- a/Inicio.html
+++ b/Inicio.html
@@ -941,7 +941,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <td>Participação De Projetos</td>
+                        <td>Projetos</td>
                         <td id="Project_TL">0</td>
                         <td class="w-50">
                           <div class="progress progress-xs">
@@ -983,7 +983,7 @@
                           <input type="checkbox" class="form-check-input m-0 align-middle" aria-label="Select task" >
                         </td>
                         <td class="w-100">
-                          <a href="#" class="text-reset">Professor Alberto</a>
+                          <a href="#" class="text-reset"> Alberto</a>
                         </td>
                         <td class="text-nowrap text-muted">
                           <!-- Download SVG icon from http://tabler-icons.io/i/calendar -->
@@ -1012,7 +1012,7 @@
                           <input type="checkbox" class="form-check-input m-0 align-middle" aria-label="Select task" >
                         </td>
                         <td class="w-100">
-                          <a href="#" class="text-reset">Professor Érico</a>
+                          <a href="#" class="text-reset"> Érico</a>
                         </td>
                         <td class="text-nowrap text-muted">
                           <!-- Download SVG icon from http://tabler-icons.io/i/calendar -->
@@ -1041,7 +1041,7 @@
                           <input type="checkbox" class="form-check-input m-0 align-middle" aria-label="Select task" >
                         </td>
                         <td class="w-100">
-                          <a href="#" class="text-reset">Professor Rildo</a>
+                          <a href="#" class="text-reset"> Rildo</a>
                         </td>
                         <td class="text-nowrap text-muted">
                           <!-- Download SVG icon from http://tabler-icons.io/i/calendar -->
@@ -1070,7 +1070,7 @@
                           <input type="checkbox" class="form-check-input m-0 align-middle" aria-label="Select task" >
                         </td>
                         <td class="w-100">
-                          <a href="#" class="text-reset">Professora Elena</a>
+                          <a href="#" class="text-reset">Professor Elena</a>
                         </td>
                         <td class="text-nowrap text-muted">
                           <!-- Download SVG icon from http://tabler-icons.io/i/calendar -->
@@ -1099,7 +1099,7 @@
                           <input type="checkbox" class="form-check-input m-0 align-middle" aria-label="Select task" >
                         </td>
                         <td class="w-100">
-                          <a href="#" class="text-reset">Professor Giliarde</a>
+                          <a href="#" class="text-reset"> Giliarde</a>
                         </td>
                         <td class="text-nowrap text-muted">
                           <!-- Download SVG icon from http://tabler-icons.io/i/calendar -->
@@ -1128,7 +1128,7 @@
                           <input type="checkbox" class="form-check-input m-0 align-middle" aria-label="Select task" >
                         </td>
                         <td class="w-100">
-                          <a href="#" class="text-reset">Professor Maurício</a>
+                          <a href="#" class="text-reset"> Maurício</a>
                         </td>
                         <td class="text-nowrap text-muted">
                           <!-- Download SVG icon from http://tabler-icons.io/i/calendar -->
@@ -2659,7 +2659,7 @@ localStorage.setItem('Likes_On', 'On')
  </script>
  <style>
   body {
-    zoom: 1.9 /* Coloca o zoom em 200% */
+    zoom: 1.83 /* Coloca o zoom em 200% */
 }
  </style>
 
