--- a/Inicio.html
+++ b/Inicio.html
@@ -1070,7 +1070,7 @@
                           <input type="checkbox" class="form-check-input m-0 align-middle" aria-label="Select task" >
                         </td>
                         <td class="w-100">
-                          <a href="#" class="text-reset">Professor Elena</a>
+                          <a href="#" class="text-reset"> Elena</a>
                         </td>
                         <td class="text-nowrap text-muted">
                           <!-- Download SVG icon from http://tabler-icons.io/i/calendar -->
