--- a/Inicio.html
+++ b/Inicio.html
@@ -1160,7 +1160,7 @@
                 <div class="card card-sm">
                   <div class="card-body">
                     <h3 class="card-title">Algum Poblema Com O Site?</h3>
-                    <div class="text-muted">Agora Voçê Pode Manda Ou Uma Reclamação Ou uma Sujestão Sobre o Site Pelo Gmail [Futuro]!</div>
+                    <div class="text-muted">Agora Voçê Pode Manda Ou Uma Reclamação Ou uma Sujestão Sobre o Site Pelo Gmail [rochareport01@gmail.com]!</div>
                     <div class="mt-4">
                       <div class="row">
                         <div class="col">
