--- a/Documentation.html
+++ b/Documentation.html
@@ -8,10 +8,10 @@
 
     <title>RochaBank - Documentação </title>
     <!-- CSS files -->
-    <link href="./dist/Css/tabler.min.css" rel="stylesheet"/>
-    <link href="./dist/Css/tabler-flags.min.css" rel="stylesheet"/>
-    <link href="./dist/Css/tabler-payments.min.css" rel="stylesheet"/>
-    <link href="./dist/Css/tabler-vendors.min.css" rel="stylesheet"/>
+    <link href="./dist/css/tabler.min.css" rel="stylesheet"/>
+    <link href="./dist/css/tabler-flags.min.css" rel="stylesheet"/>
+    <link href="./dist/css/tabler-payments.min.css" rel="stylesheet"/>
+    <link href="./dist/css/tabler-vendors.min.css" rel="stylesheet"/>
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -354,9 +354,9 @@ localStorage.setItem("Load1", "true");
     </script>
        <!-- Our script must be loaded after firebase references -->
        <script src="./dist/js/Index.js"></script>
-    
 
-    
+
+
 
        <style>
         #snackbar {
