--- a/Charada-01.html
+++ b/Charada-01.html
@@ -4,7 +4,7 @@
 <div id="unlockCode">
   <h1>Respoda Corretamente</h1>
   <h6>Se 70 + 15 + 95 e 12 = x^2,
-  qual valor de x - 1</h6>
+  qual valor de y - 1</h6>
   <input placeholder="Resposta" id="codePass">
   <input type="button" value="Confirmar" onclick="unlockPage()" />
 </div>
